--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,7 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-python-dotenv==1.0.0
-openai==1.0.0
-requests==2.31.0
-jinja2==3.1.2
+fastapi
+uvicorn
+jinja2
+pdfkit
+requests
+python-dotenv
 google-generativeai
-protobuf
-playwright
-
